--- a/style.css
+++ b/style.css
@@ -7,10 +7,16 @@
 }
 body{
     margin: 0;
+    box-sizing: border-box;
 }
 header{
     background-color: #FFFFFF;
-    height: 100px;
+    padding: 20px 0;
+}
+.container{
+    width: 95%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 .box{
     font-family: var(--font-primary);
@@ -27,16 +33,23 @@ header{
     display: flex;
     gap: 30px;
     align-items: center;
-    justify-content: center;
 }
-.container{
-    width: 1200px;
-    margin: 0 auto;
-    text-align: center;
+.header .inner-logo{
+    width: 200px;
+    height: 60px;
+    background-color: #E2E2E2; 
+}
+.header .inner-menu{
+    height: 34px;
+    flex: 1;
+}
+.header .inner-button{
+    height: 42px;
+    padding: 0 20px;
 }
 .section1{
     background-color: #F1F1F1;
-    height: 680px;
+    padding: 80px 0;
 }
 .inner-wrap{
     display: flex;
@@ -45,114 +58,48 @@ header{
     justify-content: center;
     flex-wrap: wrap;
 }
-.part1{
-  --tb: 80px;
-  padding-top: var(--tb);
-  padding-bottom: var(--tb);
-}
-.header .inner-logo{
-    width: 200px;
-    height: 60px;
-    border-radius: 8px;
-    background-color: #E2E2E2;
-    gap: 20px 83px;
-    
-}
-.header .inner-menu{
-    width: 820px;
-    height: 34px;
-    margin: 33 0px;
-    border-radius: 8px;
-    padding: 0 20px;
-    background-color: #E2E2E2;
-    margin-bottom: 33px;
-    margin-top: 33px;
-}
-.inner-button{
-    width: 120px;
-    height: 42px;
-    border-radius: 8px;
-    background-color: #E2E2E2;
-}
-
-.inner-content{
-    width: 585px;
+.section1 .inner-content{
+    width: calc(50% - 15px);
     height: 267px;
-    border-radius: 8px;
-    background-color: #E2E2E2;
 }
-.inner-image{
-    width: 585px;
+.section1 .inner-image{
+    width: calc(50% - 15px);
     height: 520px;
-    border-radius: 8px;
-    background-color: #E2E2E2;
 }
 .section2{
     background-color: #FFFFFF;  
-    padding: 40px 0;
-}
-.section2 .inner-item {
-    width: calc((100% - 60px) /3);
-    height: 420px;
+    padding: 80px 0;
 }
 .title{
     width: 600px;
     height: 80px;
-    border-radius: 8px;
-    margin-top: 20px;
-    background-color: #E2E2E2;
-    align-items: center;
-    display: inline flex;
-    justify-content: center;
-    font-family: var(--font-primary);
-    color: #333333;
-    font-size: 20px;
-    font-weight: 700;
+    margin: 0 auto 40px auto;
+    display: flex;
+    font-family: var(--font-secondary);
 }
-.part2 {
-  --tb: 40px;
-  padding-top: var(--tb);
-  padding-bottom: var(--tb);
-}
-.inner-item1{
-    width: 380px;
+.section2 .inner-item{
+    width: calc((100% - 60px) /3);
     height: 420px;
-    border-radius: 8px;
-    background-color: #E2E2E2;
 }
 .section3{
     background-color: #F1F1F1;
-    padding: 40px 0;
+    padding: 80px 0;
 }
-.part3{
-  --tb: 40px;
-  padding-top: var(--tb);
-  padding-bottom: var(--tb);
-}
-.inner-item2{
-    width: 216px;
+.section3 .inner-item2{
+    width: calc((100% - 120px) / 5);
     height: 300px;
-    border-radius: 8px;
-    background-color: #E2E2E2;
 }
 .section4{  
     background-color: #FFFFFF;
-    padding: 40px 0px;
+    padding: 80px 0;
 }
-.part4{
-    --tb: 40px;
-    padding-top: var(--tb);
-    padding-bottom: var(--tb);
-}
-.inner-item3{
-    width: 277.5px;
+.section4 .inner-item3{
+    width: calc((100% - 90px) / 4);
     height: 300px;
-    border-radius: 8px;
-    background-color: #E2E2E2;
 }
 footer{
     background-color: #D9D9D9;
     height: 72px;
-    font-size: 20px;
-    font-weight: 700;
+    width: 100%;
+    font-family: var(--font-secondary);
 }
