--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 :root {
     --color-primary: #333333;
     --color-secondary : #E2E2E2;
@@ -5,18 +10,16 @@
     --font-primary : "Be Vietnam Pro", sans-serif;
     --font-secondary : "Lora", serif;
 }
+section {
+    padding: 80px;
+}
 body{
     margin: 0;
     box-sizing: border-box;
 }
 header{
     background-color: #FFFFFF;
-    padding: 20px 0;
-}
-.container{
-    width: 95%;
-    max-width: 1200px;
-    margin: 0 auto;
+    padding: 20px 80px;
 }
 .box{
     font-family: var(--font-primary);
@@ -33,23 +36,23 @@ header{
     display: flex;
     gap: 30px;
     align-items: center;
+    justify-content: space-between;
 }
 .header .inner-logo{
     width: 200px;
     height: 60px;
     background-color: #E2E2E2; 
 }
-.header .inner-menu{
-    height: 34px;
-    flex: 1;
-}
 .header .inner-button{
+    width: 120px;
     height: 42px;
-    padding: 0 20px;
+}
+.header .inner-menu{
+    width: 100%;
+    height: 34px;
 }
 .section1{
     background-color: #F1F1F1;
-    padding: 80px 0;
 }
 .inner-wrap{
     display: flex;
@@ -68,10 +71,9 @@ header{
 }
 .section2{
     background-color: #FFFFFF;  
-    padding: 80px 0;
 }
 .title{
-    width: 600px;
+    width: 50%;
     height: 80px;
     margin: 0 auto 40px auto;
     display: flex;
@@ -83,7 +85,6 @@ header{
 }
 .section3{
     background-color: #F1F1F1;
-    padding: 80px 0;
 }
 .section3 .inner-item2{
     width: calc((100% - 120px) / 5);
@@ -91,7 +92,6 @@ header{
 }
 .section4{  
     background-color: #FFFFFF;
-    padding: 80px 0;
 }
 .section4 .inner-item3{
     width: calc((100% - 90px) / 4);
